--- a/configs/ppo_v1.yaml
+++ b/configs/ppo_v1.yaml
@@ -12,9 +12,9 @@ model:
   policy: "CnnPolicy"
   features_dim: 512
 
-  learning_rate: 0.0003 
-  n_steps: 128
-  batch_size: 4096
+  learning_rate: "cosine_schedule(0.0003)" 
+  n_steps: 256
+  batch_size: 8192
   n_epochs: 4
   gamma: 0.99
   gae_lambda: 0.95
